upgrade to father

--- a/src/index.mdx
+++ b/src/index.mdx
@@ -1,15 +1,6 @@
 ---
-name: Button
+name: 1.介绍
 route: /
 ---
 
-import Button from './index';
-
-# Button
-
-## Normal Button
-
-<Button> Normal Button </Button>
-
-## Red Button
-<Button color="red"> Red Button </Button>
+# Hello, This is our component library
